[ADM-4318] Fix spacing and i18n

--- a/src/app/catalog/list/catalog-item/catalog-item.component.scss
+++ b/src/app/catalog/list/catalog-item/catalog-item.component.scss
@@ -200,7 +200,7 @@ $feature-button-width: 170px;
       display: none;
     }
     .pro & {
-      min-width: 286px;
+      min-width: 338px;
     }
     button, tsl-button {
       margin-left: 12px;
